--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
 <link href="https://fonts.googleapis.com/css2?family=Quantico:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
 </head>
 <body>
     <nav id="nav-bar">
         <div class="sideText">{Coded By Abhee}</div>
-        <button>Mail Me</button>
+        <button id="mail-me-button">Mail Me</button>
     </nav>
    
     <script src="script.js"></script>
@@ -46,7 +47,7 @@
     </div>
     </div>
 
-    <div class="landing-page3">
+    <div class="landing-page3" id="contact-section">
          Contact Me <div class="contact-txt">✉️ abhaynimbalkar191@gmail.com</div>
         
     </div>
