--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
-
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Questrial&display=swap" rel="stylesheet">
 
-
+<link href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css" rel="stylesheet"/>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Quantico:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
@@ -30,7 +30,6 @@
     <div class="subtxt-below">"Passionate about code & curious about everything."</div>
     <div class="subtxt">SKILLS I HAVE</div>
     <div class="skillSection">
-        
         <div class="item">{ WEB DEV }</div>
         <div class="item">{ GAME DEV }</div>
         <div class="item">{ PYTHON }</div>
@@ -39,7 +38,7 @@
     </div>
 
     <div class="landing-page2">
-      <div class="headingtxt">Projects <div class="sub-text"> I've Created.... </div>  </div> 
+      <div class="headingtxt">Projects<div class="sub-text"> I've Created.... </div> </div> 
       <div class="projects-block">
         <a href="https://bit.ly/Quote-Flix-App-By-Abhee"><button>QuoteFlix App</button></a>
         <a href="https://bit.ly/Avoid-it-by-Abhee"><button>Avoid IT Game</button></a>
@@ -48,8 +47,11 @@
     </div>
 
     <div class="landing-page3" id="contact-section">
-         Contact Me <div class="contact-txt">✉️ abhaynimbalkar191@gmail.com</div>
+         Contact Me <div class="contact-txt">
+        <a href="mailto:abhaynimbalkar191@gmail.com"> <i class="ri-mail-send-line"></i> Mail Me !</a> <br> <br>
         
+        <a href="https://www.instagram.com/_abheeeeeeee/"><i class="fa fa-instagram" style="font-size:36px"></i> Follow Me On Instagram!</a>
+        </div>
     </div>
 </body>
 </html>
